--- a/privacy.html
+++ b/privacy.html
@@ -89,6 +89,30 @@ All brand names belong to their respective owners.<br><br>
 Thank you for visiting. 
   </div>
 </footer>
+    <!-- Overlay -->
+<div class="menu-overlay" onclick="closeMenu()"></div>
+
+<!-- Slide Menu -->
+<nav class="side-menu">
+  <div class="menu-header">
+    <span>Menu</span>
+    <span class="close-btn" onclick="closeMenu()">✕</span>
+  </div>
+
+  <!-- Theme Toggle (UI only) -->
+<div class="theme-toggle">
+  <span>Theme</span>
+  <div class="toggle-switch" onclick="toggleThemeButton()">
+    <div class="toggle-circle"></div>
+  </div>
+</div>
+
+  <a href="about.html">About Us</a>
+  <a href="privacy.html">Privacy Policy</a>
+  <a href="shipping.html">Shipping Policy</a>
+  <a href="return.html">Return & Cancellation</a>
+  <a href="terms.html">Terms of Service</a>
+</nav>
 
 </body>
 </html>
