--- a/index.html
+++ b/index.html
@@ -120,7 +120,10 @@ href="https://wa.me/918792744018?text=Hi%20I%20need%20help%20regarding%20Diecast
 target="_blank">
 <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
 </a>
-  
+  <div class="dev-note">
+  Improving Diecast.scape — <span>new features rolling out</span>
+</div>
+
   <footer class="site-footer">
   <div class="footer-social">
     <a href="https://instagram.com/diecast.scape" target="_blank">Instagram</a>
@@ -163,7 +166,8 @@ Thank you for visiting.
     <div class="toggle-circle"></div>
   </div>
 </div>
-
+  
+  <a href="special-sale.html" class="menu-sale">🔥 Special Sale</a>
   <a href="about.html">About Us</a>
   <a href="privacy.html">Privacy Policy</a>
   <a href="shipping.html">Shipping Policy</a>
