--- a/special-sale.html
+++ b/special-sale.html
@@ -1,1 +1,118 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3X5F6D7CST"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3X5F6D7CST');
+  
+  function openMenu() {
+  document.body.classList.add("menu-open");
+}
+
+function closeMenu() {
+  document.body.classList.remove("menu-open");
+}
+
+document.addEventListener("DOMContentLoaded", function () {
+  const toggleSwitch = document.querySelector(".toggle-switch");
+
+  // Apply saved theme
+  if (localStorage.getItem("theme") === "light") {
+    document.body.classList.add("light-theme");
+    if (toggleSwitch) toggleSwitch.classList.add("active");
+  }
+
+  // Toggle theme (global)
+  window.toggleThemeButton = function () {
+    document.body.classList.toggle("light-theme");
+
+    if (toggleSwitch) {
+      toggleSwitch.classList.toggle("active");
+    }
+
+    localStorage.setItem(
+      "theme",
+      document.body.classList.contains("light-theme") ? "light" : "dark"
+    );
+  };
+});
+
+</script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Shipping Policy | Diecast.scape</title>
+
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<!-- HEADER -->
+<header class="site-header">
+  <div class="header-inner">
+    <img src="logo.png" class="header-logo" alt="Diecast Scape Logo">
+
+    <div class="header-title">DIECAST.SCAPE</div>
+
+    <!-- Hamburger -->
+    <div class="hamburger" onclick="openMenu()">☰</div>
+  </div>
+</header>
+
+
+<!-- PAGE CONTENT -->
+<div class="page">
+  <h1>🔥 Special Sale</h1>
+  <p>
+    Limited-time offers and exclusive deals will be available here soon.
+  </p>
+
+  <div class="coming-soon">
+    <span>Coming Soon</span>
+  </div>
+<p><a href="index.html">← Back to Home</a></p>
+
+</div>
+
+<!-- FOOTER -->
+<footer class="site-footer">
+  <div class="footer-copy">
+    
+This is a small independent business. Policies and information are subject to change without prior notice.<br><br>
+    © 2026 Diecast.scape —  Handcrafted Dioramas<br>
+All brand names belong to their respective owners.<br><br>
+Thank you for visiting. 
+  </div>
+</footer>
+    <!-- Overlay -->
+<div class="menu-overlay" onclick="closeMenu()"></div>
+
+<!-- Slide Menu -->
+<nav class="side-menu">
+  <div class="menu-header">
+    <span>Menu</span>
+    <span class="close-btn" onclick="closeMenu()">✕</span>
+  </div>
+
+  <!-- Theme Toggle (UI only) -->
+<div class="theme-toggle">
+  <span>Theme</span>
+  <div class="toggle-switch" onclick="toggleThemeButton()">
+    <div class="toggle-circle"></div>
+  </div>
+</div>
+
+  <a href="about.html">About Us</a>
+  <a href="privacy.html">Privacy Policy</a>
+  <a href="shipping.html">Shipping Policy</a>
+  <a href="return.html">Return & Cancellation</a>
+  <a href="terms.html">Terms of Service</a>
+</nav>
+
+</body>
+</html>
