--- a/index.html
+++ b/index.html
@@ -54,6 +54,37 @@ Built with premium materials, realistic details, and precise scale accuracy.
   Built in Scale. <span>Coming Soon</span>
 </div>
 
+  
+<div class="section">
+  <div class="diorama-title">Porsche Handcrafted Diorama</div>
+
+  <div class="slider">
+    <img src="images/products/Image16.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image17.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image18.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image19.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image20.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image21.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image22.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image23.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image24.jpg" onclick="openLightbox(this.src)">
+  </div>
+
+  <div class="price">
+    <span class="old">₹1149</span>
+    <span class="new">₹799</span>
+  </div>
+
+  <div class="discount">30.45% OFF · Save ₹350</div>
+  <div class="ship">+ Shipping charges applicable</div>
+
+  <a class="buy-btn"
+     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20Porsche%20Handcrafted%20Diorama%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
+     target="_blank">
+     Order on WhatsApp
+  </a>
+</div>
+  
 <div class="section">
   <div class="diorama-title">NISSAN Handcrafted Diorama</div>
 
