--- a/index.html
+++ b/index.html
@@ -79,39 +79,30 @@ Built with premium materials, realistic details, and precise scale accuracy.
   <div class="ship">+ Shipping charges applicable</div>
   
   <button class="details-btn" onclick="toggleDetails(this)">Details ▾</button>
-
  <div class="product-details">
-  <h4>Product Details</h4>
-
   <p>
     This is a <strong>fully assembled, ready-to-display diorama</strong>,
-    crafted for collectors who value realism and premium presentation.
+    designed for collectors who value realism and craftsmanship.
   </p>
 
   <p>
-    The diorama comes in a <strong>box-style enclosure</strong> with
+    The diorama comes enclosed in a <strong>box-style display</strong> with
     <strong>built-in LED lighting</strong> and a
-    <strong>clear acrylic front panel</strong>, providing enhanced depth,
-    visibility, and protection.
+    <strong>clear acrylic front panel</strong> for enhanced presentation and protection.
   </p>
 
   <p>
-    A <strong>power adapter is included</strong>, ensuring easy setup with
-    no additional installation required.
+    An <strong>external power adapter is included</strong>, ensuring quick and
+    hassle-free setup.
   </p>
+
+  <p><strong>Product Dimensions:</strong> 270 × 125 × 120 mm</p>
 
   <p>
-    <strong>Product Dimensions:</strong><br>
-    270 × 125 × 120 mm
-  </p>
-
-  <p class="note">
-    <strong>Note:</strong> Display models (cars) are <strong>not included</strong>
-    and are shown for representation purposes only.
+    <strong>Note:</strong> Display models (cars) are
+    <strong>not included</strong> and are shown for representation purposes only.
   </p>
 </div>
-
-
 
   <a class="buy-btn"
      href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20Porsche%20Handcrafted%20Diorama%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
@@ -142,6 +133,32 @@ Built with premium materials, realistic details, and precise scale accuracy.
   <div class="discount">30.45% OFF · Save ₹350</div>
   <div class="ship">+ Shipping charges applicable</div>
 
+  <button class="details-btn" onclick="toggleDetails(this)">Details ▾</button>
+ <div class="product-details">
+  <p>
+    This is a <strong>fully assembled, ready-to-display diorama</strong>,
+    designed for collectors who value realism and craftsmanship.
+  </p>
+
+  <p>
+    The diorama comes enclosed in a <strong>box-style display</strong> with
+    <strong>built-in LED lighting</strong> and a
+    <strong>clear acrylic front panel</strong> for enhanced presentation and protection.
+  </p>
+
+  <p>
+    An <strong>external power adapter is included</strong>, ensuring quick and
+    hassle-free setup.
+  </p>
+
+  <p><strong>Product Dimensions:</strong> 270 × 125 × 120 mm</p>
+
+  <p>
+    <strong>Note:</strong> Display models (cars) are
+    <strong>not included</strong> and are shown for representation purposes only.
+  </p>
+ </div>
+
   <a class="buy-btn"
      href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20Nissan%20Handcrafted%20Diorama%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
      target="_blank">
@@ -171,6 +188,32 @@ Built with premium materials, realistic details, and precise scale accuracy.
 
   <div class="discount">30.45% OFF · Save ₹350</div>
   <div class="ship">+ Shipping charges applicable</div>
+
+  <button class="details-btn" onclick="toggleDetails(this)">Details ▾</button>
+ <div class="product-details">
+  <p>
+    This is a <strong>fully assembled, ready-to-display diorama</strong>,
+    designed for collectors who value realism and craftsmanship.
+  </p>
+
+  <p>
+    The diorama comes enclosed in a <strong>box-style display</strong> with
+    <strong>built-in LED lighting</strong> and a
+    <strong>clear acrylic front panel</strong> for enhanced presentation and protection.
+  </p>
+
+  <p>
+    An <strong>external power adapter is included</strong>, ensuring quick and
+    hassle-free setup.
+  </p>
+
+  <p><strong>Product Dimensions:</strong> 270 × 125 × 120 mm</p>
+
+  <p>
+    <strong>Note:</strong> Display models (cars) are
+    <strong>not included</strong> and are shown for representation purposes only.
+  </p>
+ </div>
 
   <a class="buy-btn"
      href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20BMW%20Handcrafted%20Diorama%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
