--- a/privacy.html
+++ b/privacy.html
@@ -77,6 +77,8 @@ document.addEventListener("DOMContentLoaded", function () {
 
 <p>By using our website or contacting us via WhatsApp or Instagram, you agree to this privacy policy.</p>
 
+  <p><a href="index.html">← Back to Home</a></p>
+  
 </div>
 
 <!-- FOOTER -->
