--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ target="_blank">
 <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
 </a>
   <div class="dev-note">
-  Improving Diecast.scape — <span>new features rolling out</span>
+  Diecast.scape — <span>new features rolling out</span>
 </div>
 
   <footer class="site-footer">
