--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ target="_blank">
 
   <div class="footer-grid">
     <div>
-      <h4>Things to Know</h4>
+      <h4>Know more</h4>
       <p><a href="about.html">About Us</a></p>
       <p><a href="privacy.html">Privacy Policy</a></p>
       <p><a href="shipping.html">Shipping Policy</a></p>
