--- a/special-sale.html
+++ b/special-sale.html
@@ -47,6 +47,7 @@
   class="search-bar">
 
 <!-- PRODUCT 1 -->
+  <div class="container">
 <div class="section">
   <div class="diorama-title">Porsche Special Sale Diorama</div>
 
@@ -88,6 +89,7 @@
      target="_blank">
      Book Now
   </a>
+</div>
 </div>
 
 
