--- a/special-sale.html
+++ b/special-sale.html
@@ -31,13 +31,11 @@
   </div>
 </header>
 
-
-<!-- PAGE INTRO -->
-<div class="page">
-  <h1>🔥 Special Sale</h1>
-  <p>Limited stock · Special pricing</p>
-</div>
-
+<div class="subtitle">Built in Scale. Crafted with Soul.</div>
+<div class="description">
+Handcrafted dioramas designed to elevate your diecast collection.
+Built with premium materials, realistic details, and precise scale accuracy.
+  
 <!-- SEARCH -->
 <input
   type="text"
