--- a/special-sale.html
+++ b/special-sale.html
@@ -31,16 +31,15 @@
   </div>
 </header>
 
-<div class="subtitle">Built in Scale. Crafted with Soul.</div>
+<div class="subtitle">Special Sale</div>
 <div class="description">
-Handcrafted dioramas designed to elevate your diecast collection.
-Built with premium materials, realistic details, and precise scale accuracy.
-  
+Limited stock · Special pricing
+  </div>
 <!-- SEARCH -->
 <input
   type="text"
   id="searchInput"
-  placeholder="Search special sale..."
+  placeholder="Search"
   onkeyup="searchProducts()"
   class="search-bar">
 
@@ -89,8 +88,31 @@ Built with premium materials, realistic details, and precise scale accuracy.
   </a>
 </div>
 
-<!-- FOOTER -->
-<footer class="site-footer">
+  <a class="wa-float"
+href="https://wa.me/918792744018?text=Hi%20I%20need%20help%20regarding%20Diecast.scape%20dioramas."
+target="_blank">
+<img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
+</a>
+  <div class="dev-note">
+  Diecast.scape — <span>new features rolling out</span>
+</div>
+
+  <footer class="site-footer">
+  <div class="footer-social">
+    <a href="https://instagram.com/diecast.scape" target="_blank">Instagram</a>
+    <a href="https://wa.me/918792744018" target="_blank">WhatsApp</a>
+  </div>
+
+  <div class="footer-grid">
+    <div>
+      <h4>Know more</h4>
+      <p><a href="about.html">About Us</a></p>
+      <p><a href="privacy.html">Privacy Policy</a></p>
+      <p><a href="shipping.html">Shipping Policy</a></p>
+      <p><a href="return.html">Return & Cancellation</a></p>
+      <p><a href="terms.html">Terms of Service</a></p>
+    </div>
+
   <div class="footer-copy">
     
 This is a small independent business. Policies and information are subject to change without prior notice.<br><br>
@@ -99,6 +121,7 @@ All brand names belong to their respective owners.<br><br>
 Thank you for visiting. 
   </div>
 </footer>
+
     <!-- Overlay -->
 <div class="menu-overlay" onclick="closeMenu()"></div>
 
