--- a/special-sale.html
+++ b/special-sale.html
@@ -33,8 +33,8 @@
 
 <div class="subtitle">Special Sale</div>
 <div class="description">
-Limited stock · Special pricing
-  </div>
+mainline hot wheels . Limited stock
+  
 <!-- SEARCH -->
 <input
   type="text"
@@ -46,7 +46,7 @@ Limited stock · Special pricing
 <!-- PRODUCT 1 -->
   
 <div class="section">
-  <div class="diorama-title">Porsche Special Sale Diorama</div>
+  <div class="diorama-title">Porsche</div>
 
   <div class="slider">
     <img src="images/products/Image16.jpg" onclick="openLightbox(this.src)">
@@ -54,13 +54,13 @@ Limited stock · Special pricing
   </div>
 
   <div class="price">
-    <span class="new">₹699</span>
+    <span class="new">₹179</span>
   </div>
 
   <div class="ship">+ Shipping charges applicable</div>
 
   <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%20I%20want%20to%20book%20the%20Porsche%20Special%20Sale%20Diorama%20for%20₹699."
+     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%20I%20want%20to%20book%20the%20Porsche%20at%20₹MRP."
      target="_blank">
      Book Now
   </a>
@@ -68,7 +68,7 @@ Limited stock · Special pricing
 
 <!-- PRODUCT 2 -->
 <div class="section">
-  <div class="diorama-title">Nissan Special Sale Diorama</div>
+  <div class="diorama-title">Nissan</div>
 
   <div class="slider">
     <img src="images/products/Image8.jpg" onclick="openLightbox(this.src)">
@@ -76,13 +76,13 @@ Limited stock · Special pricing
   </div>
 
   <div class="price">
-    <span class="new">₹699</span>
+    <span class="new">₹179</span>
   </div>
 
   <div class="ship">+ Shipping charges applicable</div>
 
   <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%20I%20want%20to%20book%20the%20Nissan%20Special%20Sale%20Diorama%20for%20₹699."
+     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%20I%20want%20to%20book%20the%20Nissan%20at%20₹MRP."
      target="_blank">
      Book Now
   </a>
