--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="subtitle">Built in Scale. Crafted with Soul.</div>
 <div class="description">
 Handcrafted dioramas designed to elevate your diecast collection.
-Built with premium materials, realistic details, and precise scale accuracy.
+Built with premium materials, realistic details, and precise scale accuracy.</div>
   
 <input
   type="text"
