--- a/special-sale.html
+++ b/special-sale.html
@@ -31,10 +31,12 @@
   </div>
 </header>
 
-<div class="subtitle">Special Sale</div>
-<div class="description">
-mainline hot wheels . Limited stock
-  
+  <!-- PAGE INTRO -->
+<div class="page">
+  <h1>🔥 Special Sale</h1>
+  <p>Limited stock · Special pricing</p>
+</div>
+
 <!-- SEARCH -->
 <input
   type="text"
