--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Built with premium materials, realistic details, and precise scale accuracy.</di
   class="search-bar">
 
   <div class="coming-soon">
-  Built in Scale. <span>Coming Soon</span>
+  New product.<span>Coming up</span>
 </div>
 
   
@@ -229,9 +229,6 @@ href="https://wa.me/918792744018?text=Hi%20I%20need%20help%20regarding%20Diecast
 target="_blank">
 <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
 </a>
-  <div class="dev-note">
-  Diecast.scape — <span>new features rolling out</span>
-</div>
 
   <footer class="site-footer">
   <div class="footer-social">
@@ -276,7 +273,7 @@ Thank you for visiting.
   </div>
 </div>
   
-  <a href="special-sale.html" class="menu-sale">🔥 Special Sale</a>
+  <a href="special-sale" class="menu-sale">🔥 Special Sale</a>
   <a href="about.html">About Us</a>
   <a href="privacy.html">Privacy Policy</a>
   <a href="shipping.html">Shipping Policy</a>
