--- a/special-sale.html
+++ b/special-sale.html
@@ -36,6 +36,13 @@
   <h1>🔥 Special Sale</h1>
   <p>Limited stock · Special pricing</p>
 </div>
+  <button class="details-btn" onclick="toggleDetails(this)">booking guide ▾</button>
+ <div class="product-details">
+  <p>
+    This is in testing 
+  </p>
+</div>
+
 
 <!-- SEARCH -->
 <input
@@ -51,8 +58,8 @@
   <div class="diorama-title">Porsche</div>
 
   <div class="slider">
-    <img src="images/products/Image16.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image17.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image.jpg" onclick="openLightbox(this.src)">
   </div>
 
   <div class="price">
@@ -73,8 +80,8 @@
   <div class="diorama-title">Nissan</div>
 
   <div class="slider">
-    <img src="images/products/Image8.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image9.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image.jpg" onclick="openLightbox(this.src)">
   </div>
 
   <div class="price">
