--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@ Built with premium materials, realistic details, and precise scale accuracy.</di
   <div class="discount">30.45% OFF · Save ₹350</div>
   <div class="ship">+ Shipping charges applicable</div>
   
-  <button class="details-btn" onclick="toggleDetails(this)">Details ▾</button>
+  <button class="details-btn" data-label="Details" onclick="toggleDetails(this)">
+  Details ▾
+</button>
  <div class="product-details">
   <p>
     This is a <strong>fully assembled, ready-to-display diorama</strong>,
@@ -133,7 +135,9 @@ Built with premium materials, realistic details, and precise scale accuracy.</di
   <div class="discount">30.45% OFF · Save ₹350</div>
   <div class="ship">+ Shipping charges applicable</div>
 
-  <button class="details-btn" onclick="toggleDetails(this)">Details ▾</button>
+  <button class="details-btn" data-label="Details" onclick="toggleDetails(this)">
+  Details ▾
+</button>
  <div class="product-details">
   <p>
     This is a <strong>fully assembled, ready-to-display diorama</strong>,
@@ -189,7 +193,9 @@ Built with premium materials, realistic details, and precise scale accuracy.</di
   <div class="discount">30.45% OFF · Save ₹350</div>
   <div class="ship">+ Shipping charges applicable</div>
 
-  <button class="details-btn" onclick="toggleDetails(this)">Details ▾</button>
+  <button class="details-btn" data-label="Details" onclick="toggleDetails(this)">
+  Details ▾
+</button>
  <div class="product-details">
   <p>
     This is a <strong>fully assembled, ready-to-display diorama</strong>,
