--- a/special-sale.html
+++ b/special-sale.html
@@ -35,8 +35,10 @@
 <div class="page">
   <h1>🔥 Special Sale</h1>
   <p>Limited stock · Special pricing</p>
-  <button class="details-btn" onclick="toggleDetails(this)">booking guide ▾</button>
- <div class="product-details">
+  <button class="details-btn booking-btn" data-label="Booking Guide" onclick="toggleDetails(this)">
+  Booking Guide ▾
+</button>
+  <div class="product-details">
   <p>
     This is in testing 
   </p>
