--- a/special-sale.html
+++ b/special-sale.html
@@ -145,7 +145,8 @@ Thank you for visiting.
     <div class="toggle-circle"></div>
   </div>
 </div>
-
+ 
+  <a href="index.html" class="menu-sale">HOME</a>
   <a href="about.html">About Us</a>
   <a href="privacy.html">Privacy Policy</a>
   <a href="shipping.html">Shipping Policy</a>
