--- a/privacy.html
+++ b/privacy.html
@@ -10,42 +10,10 @@
 
   gtag('config', 'G-3X5F6D7CST');
 
-  function openMenu() {
-  document.body.classList.add("menu-open");
-}
-
-function closeMenu() {
-  document.body.classList.remove("menu-open");
-}
-
-document.addEventListener("DOMContentLoaded", function () {
-  const toggleSwitch = document.querySelector(".toggle-switch");
-
-  // Apply saved theme
-  if (localStorage.getItem("theme") === "light") {
-    document.body.classList.add("light-theme");
-    if (toggleSwitch) toggleSwitch.classList.add("active");
-  }
-
-  // Toggle theme (global)
-  window.toggleThemeButton = function () {
-    document.body.classList.toggle("light-theme");
-
-    if (toggleSwitch) {
-      toggleSwitch.classList.toggle("active");
-    }
-
-    localStorage.setItem(
-      "theme",
-      document.body.classList.contains("light-theme") ? "light" : "dark"
-    );
-  };
-});
-
 </script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Shipping Policy | Diecast.scape</title>
+<title>Privacy Policy | Diecast.scape</title>
 
 <link rel="stylesheet" href="style.css">
 </head>
@@ -115,6 +83,6 @@ Thank you for visiting.
   <a href="return.html">Return & Cancellation</a>
   <a href="terms.html">Terms of Service</a>
 </nav>
-
+  <script src="script.js"></script>
 </body>
 </html>
