--- a/return.html
+++ b/return.html
@@ -86,6 +86,6 @@ Thank you for visiting.
   <a href="return.html">Return & Cancellation</a>
   <a href="terms.html">Terms of Service</a>
 </nav>
-<link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
 </body>
 </html>
