--- a/special-sale.html
+++ b/special-sale.html
@@ -40,11 +40,12 @@
 </button>
   <div class="product-details">
   <p>
-    This is in testing 
+    coming-soon 
   </p>
  </div>
 </div>
 <footer class="site-footer">
+</footer>
 <main id="sale-main">
 <!-- SEARCH -->
 <input
