--- a/special-sale.html
+++ b/special-sale.html
@@ -29,10 +29,11 @@
     <div class="hamburger" onclick="openMenu()">☰</div>
   </div>
 </header>
-
+  <div class="page">
+  <h1><a href="index.html">《 Back </a></h1>
+  </div>>
   <!-- PAGE INTRO -->
 <div class="page">
-  <h5><a href="index.html">《 Back </a></h5>
   <h1> Special Sale</h1>
   <p>Limited stock · limited time </p>
   <button class="details-btn booking-btn" data-label="Booking Guide" onclick="toggleDetails(this)">
