--- a/special-sale.html
+++ b/special-sale.html
@@ -31,7 +31,7 @@
 </header>
   <div class="page">
   <h1><a href="index.html">《 Back </a></h1>
-  </div>>
+  </div>
   <!-- PAGE INTRO -->
 <div class="page">
   <h1> Special Sale</h1>
