--- a/special-sale.html
+++ b/special-sale.html
@@ -29,7 +29,7 @@
     <div class="hamburger" onclick="openMenu()">☰</div>
   </div>
 </header>
-  <div class="page">
+  <div class="page1">
   <h1><a href="index.html">《 Back </a></h1>
   </div>
   <!-- PAGE INTRO -->
