--- a/special-sale.html
+++ b/special-sale.html
@@ -177,7 +177,8 @@ Thank you for visiting.
       });
 
       saleMain.innerHTML = `
-        <div style="text-align:center;padding:20px">
+      <div class="sale-off"
+         style="text-align:center;padding:20px">
           <p>Sale will be live on<br><strong>${liveDate}</strong></p>
         </div>
       `;
