--- a/special-sale.html
+++ b/special-sale.html
@@ -55,16 +55,16 @@
 <main id="sale-main">
 </main>
   <template id="sale-products">
-    <!-- PRODUCT 1 -->
-  
+
 <div class="section">
   <div class="diorama-title">Porsche</div>
-
+  <div class="slider-wrap">
   <div class="slider">
     <img src="images/products/Image.jpg" onclick="openLightbox(this.src)">
     <img src="images/products/Image.jpg" onclick="openLightbox(this.src)">
   </div>
-
+ <div class="sold-badge">SOLD</div>
+  </div>
   <div class="price">
     <span class="new">₹179</span>
   </div>
@@ -81,10 +81,12 @@
 <!-- PRODUCT 2 -->
 <div class="section">
   <div class="diorama-title">Nissan</div>
-
+  <div class="slider-wrap">
   <div class="slider">
     <img src="images/products/Image.jpg" onclick="openLightbox(this.src)">
     <img src="images/products/Image.jpg" onclick="openLightbox(this.src)">
+  </div>
+  <div class="sold-badge">SOLD</div>
   </div>
 
   <div class="price">
