--- a/special-sale.html
+++ b/special-sale.html
@@ -40,9 +40,57 @@
   Booking Guide ▾
 </button>
   <div class="product-details">
+  <button class="details-btn booking-btn" data-label="Booking Guide" onclick="toggleDetails(this)">
+  Booking Guide ▾
+</button>
+
+<div class="product-details">
   <p>
-    coming-soon 
+    •Products may be available as <strong>single pieces or combo sets</strong>, depending on stock.
   </p>
+  <p>
+    • To place an order, click the <strong>“Book Now”</strong> button to contact us on WhatsApp.
+  </p>
+  <p>
+    •Before you book, please make sure the product is not marked as <strong>Sold</strong>.
+  </p>
+
+  <p>
+    • Please wait for our confirmation first.
+    If the product is available, we’ll reply <strong>“YES”</strong>.
+  </p>
+
+  <p>
+    • To book, you can pay the <strong>booking amount or full amount</strong>.
+The booking amount is only to <strong>hold the product,</strong> so you can add more items and <strong>reduce delivery charges</strong>.
+  </p>
+  <p>
+    • <strong>Please book your products early to avoid missing out</strong>.
+  </p>
+  <p>
+    • If the product is already sold, we’ll reply <strong>“SOLD”</strong>.Sold items cannot be booked.
+  </p>
+
+  <p>
+    <strong>Important:</strong> Please do <strong>not</strong> make any payment before confirmation.
+  </p>
+
+  <p>
+    🚫 <strong>COD is not available</strong>
+  </p>
+
+  <p>
+    🚚 <strong>Pan-India delivery</strong> with proper bubble-wrap packaging.
+  </p>
+
+  <p>
+    📦 Delivery charges:
+    ₹90 up to 500g · ₹120 per kg  
+    <br><small>(Charges may vary slightly)</small>
+  </p>
+
+</div>
+
  </div>
 </div>
 <!-- SEARCH -->
@@ -60,8 +108,8 @@
   <div class="diorama-title">Porsche</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="images/products/Image.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image.jpg" onclick="openLightbox(this.src)">
+    <img src="images/sale-bg.png" onclick="openLightbox(this.src)">
+    <img src="images/sale-bg.png" onclick="openLightbox(this.src)">
   </div>
  <div class="sold-badge">SOLD</div>
   </div>
@@ -83,8 +131,8 @@
   <div class="diorama-title">Nissan</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="images/products/Image.jpg" onclick="openLightbox(this.src)">
-    <img src="images/products/Image.jpg" onclick="openLightbox(this.src)">
+    <img src="images/sale-bg.png" onclick="openLightbox(this.src)">
+    <img src="images/sale-bg.png" onclick="openLightbox(this.src)">
   </div>
   <div class="sold-badge">SOLD</div>
   </div>
