--- a/special-sale.html
+++ b/special-sale.html
@@ -16,6 +16,9 @@
 
 <link rel="stylesheet" href="style.css">
 </head>
+  <div id="lightbox" onclick="closeLightbox()">
+  <img id="lightbox-img">
+  </div>
 <body>
 
 <!-- HEADER -->
@@ -41,13 +44,17 @@
 </button>
   <div class="product-details">
   <p>
+    •Products are live during the <strong>sale time</strong>.
+   If all products are <strong>sold out</strong>, please wait for the <strong>next sale</strong>.
+    </p>
+  <p>
     •Products may be available as <strong>single pieces or combo sets</strong>, depending on stock.
   </p>
   <p>
     • To place an order, click the <strong>“Book Now”</strong> button to contact us on WhatsApp.
   </p>
   <p>
-    •Before you book, please make sure the product is not marked as <strong>Sold</strong>.
+    •Before you book, please make sure the product is not marked as <strong>Sold</strong>.Sold items cannot be booked.
   </p>
 
   <p>
@@ -63,7 +70,7 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
     • <strong>Please book your products early to avoid missing out</strong>.
   </p>
   <p>
-    • If the product is already sold, we’ll reply <strong>“SOLD”</strong>.Sold items cannot be booked.
+    • If the product is already sold, we’ll reply <strong>“SOLD”</strong>.
   </p>
 
   <p>
