--- a/special-sale.html
+++ b/special-sale.html
@@ -37,8 +37,9 @@
   </div>
   <!-- PAGE INTRO -->
 <div class="page">
-  <h1> Special Sale</h1>
-  <p>Limited stock · limited time </p>
+  <h1>diecast sale</h1>
+  <p>While you’re thinking, someone else might be booking it right now.</p>
+  <p><strong>book now</strong></p>
   <button class="details-btn booking-btn" data-label="Booking Guide" onclick="toggleDetails(this)">
   Booking Guide ▾
 </button>
