--- a/special-sale.html
+++ b/special-sale.html
@@ -99,7 +99,7 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
 <input
   type="text"
   id="searchInput"
-  placeholder="Search"
+  placeholder="Search..."
   onkeyup="searchProducts()"
   class="search-bar">
 <main id="sale-main">
@@ -146,15 +146,15 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="ship">+ Shipping charges applicable</div>
 
   <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%20I%20want%20to%20book%20the%20Nissan%20at%20₹MRP."
-     target="_blank">
+     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET01.%0AIs%20it%20available%3F"
+    target="_blank">
      Book Now
   </a>
 </div>
   </template>
 
   <a class="wa-float"
-href="https://wa.me/918792744018?text=Hi%20I%20need%20help%20regarding%20Diecast.scape%20dioramas."
+href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET02.%0AIs%20it%20available%3F"
 target="_blank">
 <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
 </a>
