--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@ Built with premium materials, realistic details, and precise scale accuracy.</di
   <div class="diorama-title">Porsche Handcrafted Diorama</div>
 
   <div class="slider">
-    <img src="images/products/Image16.jpg" loading="lazy" onclick="openLightbox(this.src)">
-    <img src="images/products/Image17.jpg" loading="lazy" onclick="openLightbox(this.src)">
-    <img src="images/products/Image18.jpg" loading="lazy" onclick="openLightbox(this.src)">
-    <img src="images/products/Image19.jpg" loading="lazy" onclick="openLightbox(this.src)">
-    <img src="images/products/Image20.jpg" loading="lazy" onclick="openLightbox(this.src)">
-    <img src="images/products/Image21.jpg" loading="lazy" onclick="openLightbox(this.src)">
-    <img src="images/products/Image22.jpg" loading="lazy" onclick="openLightbox(this.src)">
-    <img src="images/products/Image23.jpg" loading="lazy" onclick="openLightbox(this.src)">
-    <img src="images/products/Image24.jpg" loading="lazy" onclick="openLightbox(this.src)">
+    <img src="images/products/Image16.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image17.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image18.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image19.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image20.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image21.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image22.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image23.jpg" onclick="openLightbox(this.src)">
+    <img src="images/products/Image24.jpg" onclick="openLightbox(this.src)">
   </div>
 
   <div class="price">
