--- a/terms.html
+++ b/terms.html
@@ -71,7 +71,8 @@ Thank you for visiting.
     <div class="toggle-circle"></div>
   </div>
 </div>
-
+<a href="index.html" class="menu-sale">HOME</a>
+  <a href="special-sale.html" class="menu-sale">🔥 Special Sale</a>
   <a href="about.html">About Us</a>
   <a href="privacy.html">Privacy Policy</a>
   <a href="shipping.html">Shipping Policy</a>
