--- a/special-sale.html
+++ b/special-sale.html
@@ -37,9 +37,8 @@
   </div>
   <!-- PAGE INTRO -->
 <div class="page">
-  <h1>diecast sale</h1>
-  <p>While you’re thinking, someone else might be booking it right now.</p>
-  <p><strong>book now</strong></p>
+  <h1>Special sale</h1>
+  <p>While you’re thinking, someone else might be booking it right now.<strong>book now</strong></p>
   <button class="details-btn booking-btn" data-label="Booking Guide" onclick="toggleDetails(this)">
   Booking Guide ▾
 </button>
