--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>About | Diecast.scape</title>
+<title>About us | Diecast.scape</title>
 
 <link rel="stylesheet" href="style.css">
 </head>
@@ -37,13 +37,16 @@
 
 <h1>About Diecast.scape</h1>
 
-<p>Diecast.scape is a handcrafted diorama brand created for diecast collectors, photographers, and automotive enthusiasts.</p>
+<p>Diecast.scape is a custom handcrafted products brand created for diecast collectors, photographers, and automotive enthusiasts who value detail, quality, and presentation.</p>
 
-<p>Each diorama is built with premium materials, realistic detailing, and accurate scale proportions.</p>
+<p>Each product is carefully handmade using premium materials, with clean finishing and accurate scale proportions. Our designs focus on creating a minimal yet realistic showcase that highlights the car, not distracts from it.</p>
 
-<p>We focus on limited production to maintain uniqueness and quality.</p>
+<p>Every piece is built with passion and precision. We follow limited production only, ensuring that each product remains unique and special rather than mass-produced.</p>
 
-<p>Every piece reflects passion, precision, and craftsmanship.</p>
+<h1>Our Promise</h1>  
+
+<p>Every product reflects craftsmanship, creativity, and attention to detail.
+We don’t rush production, and we don’t compromise on quality.</p>
   
 
 <p><a href="index.html">← Back to Home</a></p>
@@ -55,7 +58,7 @@
   <div class="footer-copy">
     
 This is a small independent business. Policies and information are subject to change without prior notice.<br><br>
-    © 2026 Diecast.scape —  Handcrafted Dioramas<br>
+    © 2026 Diecast.scape —  custom Handcrafted products & sales<br>
 All brand names belong to their respective owners.<br><br>
 Thank you for visiting. 
   </div>
@@ -78,7 +81,7 @@ Thank you for visiting.
   </div>
 </div>
  <a href="index.html" class="menu-sale">HOME</a>
-  <a href="special-sale.html" class="menu-sale">🔥 Special Sale</a>
+  <a href="special-sale.html" class="menu-sale">Special Sale 🔥</a>
   <a href="about.html">About Us</a>
   <a href="privacy.html">Privacy Policy</a>
   <a href="shipping.html">Shipping Policy</a>
