--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@ We don’t rush production, and we don’t compromise on quality.</p>
   <div class="footer-copy">
     
 This is a small independent business. Policies and information are subject to change without prior notice.<br><br>
-    © 2026 Diecast.scape —  custom Handcrafted products & sales<br>
+    © 2026 Diecast.scape —  Custom handcrafted products & sales<br>
 All brand names belong to their respective owners.<br><br>
 Thank you for visiting. 
   </div>
