--- a/shipping.html
+++ b/shipping.html
@@ -68,7 +68,10 @@ document.addEventListener("DOMContentLoaded", function () {
 <div class="page">
 <h1>Shipping Policy</h1>
 
-<p>All Diecast.scape dioramas are handcraft and securely packed using protective bubble wrap before shipping.</p>
+<p>
+All Diecast.scape products are handcrafted and securely packed with protective bubble wrap.
+The same care is applied to all Special Sale orders to ensure safe delivery.
+</p>
 
 <p>Orders are typically processed within 2–4 working days.</p>
 
@@ -88,7 +91,7 @@ document.addEventListener("DOMContentLoaded", function () {
   <div class="footer-copy">
     
 This is a small independent business. Policies and information are subject to change without prior notice.<br><br>
-    © 2026 Diecast.scape —  Handcrafted Dioramas<br>
+    © 2026 Diecast.scape —  Custom handcrafted products & sales<br>
 All brand names belong to their respective owners.<br><br>
 Thank you for visiting. 
   </div>
@@ -111,7 +114,7 @@ Thank you for visiting.
   </div>
 </div>
 <a href="index.html" class="menu-sale">HOME</a>
-  <a href="special-sale.html" class="menu-sale">🔥 Special Sale</a>
+  <a href="special-sale.html" class="menu-sale">Special Sale 🔥</a>
   <a href="about.html">About Us</a>
   <a href="privacy.html">Privacy Policy</a>
   <a href="shipping.html">Shipping Policy</a>
