--- a/privacy.html
+++ b/privacy.html
@@ -54,7 +54,7 @@
   <div class="footer-copy">
     
 This is a small independent business. Policies and information are subject to change without prior notice.<br><br>
-    © 2026 Diecast.scape —  Handcrafted Dioramas<br>
+    © 2026 Diecast.scape —  Custom handcrafted products & sales<br>
 All brand names belong to their respective owners.<br><br>
 Thank you for visiting. 
   </div>
@@ -77,7 +77,7 @@ Thank you for visiting.
   </div>
 </div>
 <a href="index.html" class="menu-sale">HOME</a>
-  <a href="special-sale.html" class="menu-sale">🔥 Special Sale</a>
+  <a href="special-sale.html" class="menu-sale">Special Sale 🔥</a>
   <a href="about.html">About Us</a>
   <a href="privacy.html">Privacy Policy</a>
   <a href="shipping.html">Shipping Policy</a>
